<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar2"
        android:theme="?attr/actionBarTheme"
        app:logo="@drawable/ic_launcher_food_foreground"
        app:title="@string/app_title"
        app:titleMarginStart="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ic_launcher_food_background"

        app:titleTextColor="@color/secondary"
        android:minHeight="?attr/actionBarSize"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:paddingEnd="13dp"
            android:paddingStart="13dp"

            android:paddingBottom="30dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                app:boxStrokeColor="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/customerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                app:boxStrokeColor="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_address_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/Email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                app:boxStrokeColor="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_label" />

            <RadioGroup
                android:id="@+id/type_radio_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp">

                <RadioButton
                    android:id="@+id/teaSelect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type_radio_option1" />

                <RadioButton
                    android:id="@+id/coffeeSelect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type_radio_option2" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/additionalFieldText" />

            <CheckBox
                android:id="@+id/milkCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/additionalCheckboxMilk" />

            <CheckBox
                android:id="@+id/sugarCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/additionalCheckboxSugar" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/sizeText" />

            <RadioGroup
                android:id="@+id/size_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <RadioButton
                    android:id="@+id/smallSizeOption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/smallSizeText" />

                <RadioButton
                    android:id="@+id/mediumSizeOption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mediumSizeText" />

                <RadioButton
                    android:id="@+id/largeSizeOption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LargeSizeText" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/flavour" />

            <Spinner
                android:id="@+id/flavorSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/border_editext"
                android:padding="3dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:boxStrokeColor="@color/primary">

                <AutoCompleteTextView
                    android:id="@+id/regionAutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/regionText"
                    android:padding="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/storeText" />

            <Spinner
                android:id="@+id/store_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/border_editext"
                android:padding="5dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:boxStrokeColor="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/orderDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/SaleDateText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/orderButton"
                android:shadowColor="@color/primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>